--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "qr-code-generator",
+  "homepage": "https://katiaalamir.github.io/qr-code-generator-ui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +9,9 @@
     "build": "vite build",
     "serve": "vite preview",
     "lint": "eslint 'src/**/*.{js,ts,tsx}'",
-    "format": "prettier --write 'src/**/*.{js,ts,tsx,json,css,md}'"
+    "format": "prettier --write 'src/**/*.{js,ts,tsx,json,css,md}'",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
@@ -32,6 +35,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.1.1",
     "prettier": "^3.3.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
